--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-less": "~0.11.3",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-concat": "^0.5.0"
+    "grunt-contrib-concat": "^0.5.0",
+    "karma": "^0.12.28",
+    "karma-chrome-launcher": "^0.1.5",
+    "jasmine-core": "^2.1.3",
+    "karma-jasmine": "^0.3.2"
   }
 }
