--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.5",
     "jasmine-core": "^2.1.3",
-    "karma-jasmine": "^0.3.2"
+    "karma-jasmine": "^0.3.2",
+    "karma-firefox-launcher": "^0.1.3"
+  },
+  "scripts": {
+    "test": "karma start --single-run --browsers Firefox"
   }
 }
