--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ nguage: node_js
 node_js:
   - "0.10"
 before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
