--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "karma-chrome-launcher": "^0.1.5",
     "jasmine-core": "^2.1.3",
     "karma-jasmine": "^0.3.2",
-    "karma-firefox-launcher": "^0.1.3"
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-phantomjs-launcher": "^0.1.4"
   },
   "scripts": {
-    "test": "karma start --single-run --browsers Firefox"
+    "test": "karma start --single-run --browsers PhantomJS"
   }
 }
